  without context which allows them to be executed on their own more easily.
- Added utility methods to Fn like "Fn.onString()" to avoid having to specify the type as
  "Fn.on(Types.STRING)".
- Added "eq" (equality) and "notEq" (not equality) function to FnObject, FnNumber, 
  FnBoolean, FnString, FnCalendar, FnDate.
- Added "eqBy" and "notEqBy" to FnObject, FnNumber and FnBoolean.
- Added "sortBy" functions to FnArray, FnList, FnMap and FnSet. Added "sortBy" actions to
  array, list, map and set operators. 
- Added "lessThan", "lessOrEqTo", "greaterThan" and "greaterOrEqTo" functions to 
  FnObject, FnNumber and FnString.
- Added "lessThanBy", "lessOrEqToBy", "greaterThanBy", "greaterOrEqToBy" to FnObject and FnNumber.
- Added "and", "or" and "not" functions to FnBoolean and Fn.
- Added "isNull" and "isNotNull" functions to FnObject, FnNumber, FnBoolean, FnString, FnCalendar,
  FnDate.
- Added "chain" function to "Fn".
- Added "count" function to FnArray, FnList, FnMap and FnSet
- Added "contains", "notContains, "containsAll", "containsAny" and "containsNone" to 
  FnArray, FnList and FnSet.
- Added "containsKey", "notContainsKey", "containsAllKeys", "containsAnyKeys" and 
  "containsNoneKeys" to FnMap.
- Added "by" function to Fn and FnBoolean.
- Added "isNullBy" and "isNotNullBy" to FnBoolean and FnObject
- Added "ifTrue", "ifFalse", "ifNull", "ifNotNull", "ifNullOrTrue", "ifNullOrFalse",
  "ifNotNullAndTrue" and "ifNotNulAndFalse" functions to Fn.
- Added "whileTrue" and "whileFalse" functions to Fn.
- Cast methods "asArrayOf", "asListOf", "asMapOf" and "asSetOf" in array, list, map and set
  operators renamed to "of" and created "castToArrayOf", "castToListOf", "castToMapOf" and
  "castToSetOf" aliases. "asType" methods renamed to "castTo".
- Multi generic operators removed.
- Added "onArrayFor", "onListFor" and "onSetFor" methods to Op in order to build structures 
  from their elements.
  
  




1.0-beta1
=========
- First beta release of op4j.